--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "semanautn3",
     "slug": "semanautn3",
+    "facebookScheme": "fb599546973887572",
+    "facebookAppId": "599546973887572",
+    "facebookDisplayName": "Semana de la ingeniería 2021",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
