--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-facebook": "~11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
