--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#b0b1b3"
     },
     "updates": {
