--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
-    "name": "semanautn3",
+    "name": "Semana de la Ing 2021",
+    "description": "Aplicación de la semana de la ingeniería 2021",
     "slug": "semanautn3",
     "facebookScheme": "fb599546973887572",
     "facebookAppId": "599546973887572",
@@ -28,7 +29,10 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.alexlecco.semanautn3",
+      "versionCode": 1,
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
